k8s/prod/service.yml
apiVersion: v1
kind: Service
metadata:
  name: soncollab-frontend-service
  namespace: soncollab
  labels:
    app: soncollab-frontend
    environment: production
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: soncollab-frontend
    environment: production
  sessionAffinity: None
